istio/legacy-ingress-gateway/probe-test-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: probe-test-app
  namespace: default
  labels:
    app.kubernetes.io/name: probe-test-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: probe-test-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: probe-test-app
    spec:
      containers:
        - name: probe-test-app
          image: mirror.gcr.io/jasonumiker/probe-test-app:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 52Mi
          livenessProbe:
            httpGet:
              path: /livez
              port: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
