istio/legacy-ingress-gateway/probe-test-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: probe-test-app
  namespace: default
spec:
  ports:
  - name: 8080-tcp
    port: 8000
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: probe-test-app
  type: LoadBalancer
